--- a/Chapter3.Rmd
+++ b/Chapter3.Rmd
@@ -1,4 +1,7 @@
-# Chapter 3 - Data wrangling and logistic regression
+---
+title: "Chapter 3: Logistic regression"
+output: html_document
+---
 
 ## Suvi Kivi 13.11.2018. This file shows what I have learned this week.
 
