--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,134 +1,44 @@
-# Chapter 2 - working with data / regression analysis
-
-*I learned to do new things with R!*
-
-- I learned what graphical things it is possible to do with R, I haven't tried this before.
-- I also learned how to do regression analysis in R. Also a new thing for me!
+---
+title: "Chapter2: Regression and model validation"
+output: html_document
+---
 
 # Suvi Kivi 11.11.2018. This file shows what I have learned this week!
 
-# DATA WRANGLING #
-
-## 2. Taking dataset in & dimension and structure of the data ##
-
-*Taking dataset in*
-
-lrn2014 <- read.table("http://www.helsinki.fi/~kvehkala/JYTmooc/JYTOPKYS3-data.txt", sep="\t", header=TRUE)
-
-*Dimension of the data*
-
-dim (lrn2014)
-
- - there is 183 obs and 60 variables in the dataset
-
-*Structure of the data*
-
-str(lrn2014)
-
- - there are 59 integer variables and only one factor variable (gender)
-
-## 3. Analysis dataset ##
-
-*Access the dplyr library*
-
-install.packages("dplyr")
-
-library(dplyr)
-
-*Questions related to deep, surface and strategic learning*
-
-deep_questions <- c("D03", "D11", "D19", "D27", "D07", "D14", "D22", "D30","D06",  "D15", "D23", "D31")
-
-surface_questions <- c("SU02","SU10","SU18","SU26", "SU05","SU13","SU21","SU29","SU08","SU16","SU24","SU32")
-
-strategic_questions <- c("ST01","ST09","ST17","ST25","ST04","ST12","ST20","ST28")
-
-*Selecting columns related to deep learning and creating a new column 'deep' by averaging*
-
-deep_columns <- select(lrn2014, one_of(deep_questions))
-
-lrn2014$deep <- rowMeans(deep_columns)
-
-*Selecting columns related to surface learning and creating column 'surf' by averaging*
-
-surface_columns <- select(lrn2014, one_of(surface_questions))
-
-lrn2014$surf <- rowMeans(surface_columns)
-
-*Selecting columns related to strategic learning and creating column 'stra' by averaging*
-
-strategic_columns <- select(lrn2014, one_of(strategic_questions))
-
-lrn2014$stra <- rowMeans(strategic_columns)
-
-*Choosing the right columns to keep*
-
-keep_columns <- c("gender","Age","Attitude", "deep", "stra", "surf", "Points")
-
-*Selecting the 'keep_columns' to create a new dataset*
-
-learning2014 <- select(lrn2014, one_of(keep_columns))
-
-*Select rows where points is greater than zero*
-
-learning2014 <- filter(learning2014, Points > 0)
-
-- now there are 166 obs. and 7 variables in the dataset
-
-## 4. Setting the working directory and writing/reading csv-files ##
-
-*Setting the working directory*
-
-setwd("/Users/suvi/Documents/GitHub/IODS-project")
-
-*Write csv*
-
-?write.csv
-
-write.csv(learning2014, "/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv")
-
-*Read csv*
-
-?read.csv
-
-read.csv("/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv")
-
-*Structure of the csv*
-
-str("/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv")
-
-head("/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv")
 
 # ANALYSIS #
 
-## 1. Looking at learning 2014 dataset ##
+## 1. Loading data in
 
-Data is already in after data wrangling and that is why I don't read it from the web.
+```{r}
+
+learning2014 <- read.csv("/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv")
 
 dim(learning2014)
 
 str (learning2014)
 
-- Learning2014 dataset shows information about student, their attitudes and how they perform in tests.
-- There are information about 166 students in the data and the variables are gender, age, attitude, deep, stra, surf and points.
-- Gender and age are basic information about the student. Attitude shows students' attitude towards statistics (many questions in the backround).
-- Variables deep, stra and surf are collected together from different questions and the data shows the average of the Likert-scale (1-5).
-- Variable points shows the students' exam points.
+```
 
-## 2. graphical overview of the data ##
+Learning2014 dataset shows information about student, their attitudes and how they perform in tests. There are information about 166 students in the data and the variables are gender, age, attitude, deep, stra, surf and points. Gender and age are basic information about the student. Attitude shows students' attitude towards statistics (many questions in the backround). Variables deep, stra and surf are collected together from different questions and the data shows the average of the Likert-scale (1-5). Variable points shows the students' exam points.
 
-*Graphical overwiev helps to understand the data. If we want to see the summaries of the variables, histogram is one way to see that.*
+## 2. graphical overview of the data
+
+Graphical overwiev helps to understand the data. If we want to see the summaries of the variables, histogram is one way to see that.
+
+```{r}
 
 hist_age <- hist(learning2014$Age)
 
 hist_attitude <- hist(learning2014$Attitude)
 
-- In learning2014 data most of the students are 20-15 years old. 
-- The most common attitude points are 30-35.
+```
 
-*Plots are also a good way to explore the data. For example we can see the points and the attitude in the same plot*
+As we can see, most of the students are 20-15 years old. The most common attitude points are 30-35.
 
-install.packages("ggplot2")
+Plots are also a good way to explore the data. For example we can see the points and the attitude in the same plot
+
+```{r}
 
 library(ggplot2)
 
@@ -142,13 +52,15 @@ plot3 <- plot2 + geom_smooth(method = "lm")
 
 plot3
 
-- It seems that if the students attitude is higher the points are little bit higher too (we will test this later)
+```
 
-*Also a good way to see data by all the variables, is to use pairs (pairs or for example ggpairs)*
+It seems that if the students attitude is higher the points are little bit higher too (we will test this later).
+
+Also a good way to see data by all the variables, is to use pairs (pairs or for example ggpairs)
+
+```{r}
 
 pairs(learning2014[-1])
-
-install.packages("GGally")
 
 library(GGally)
 
@@ -156,40 +68,58 @@ p <- ggpairs(learning2014, mapping = aes(), lower = list(combo = wrap("facethist
 
 p
 
-## 3. Choosing three explanatory variables -> regression analysis between attitude and points ##
+```
 
-*Simple regression analysis: attitude and points*
+## 3. Choosing three explanatory variables -> regression analysis between attitude and points
+
+Simple regression analysis: attitude and points
+
+
+```{r}
 
 keep_columns <- c("Age", "Attitude", "deep", "Points")
 
+library(dplyr)
 variables <- select(learning2014, one_of(keep_columns))
 
 qplot(Attitude, Points, data = variables) + geom_smooth(method = "lm")
 
 linear_model <- lm(Points ~ Attitude, data = variables)
 
-## 4. Summary of the models (simple and multiple models) ##
+summary (linear_model)
+
+```
+
+
+## 4. Summary of the models (simple and multiple models)
 
 *Summary (linear_model)*
 
-- There is statistical relationship between points and attitude because P-value is smaller than 0,05 (4.119e-09)
-- This means that if the attitude of the student is high, the student will more likely to have good points in test.
+There is statistical relationship between points and attitude because P-value is smaller than 0,05 (4.119e-09). This means that if the attitude of the student is high, the student will more likely to have good points in test.
 
 *Multiple regression analysis*
+
+
+```{r}
 
 linear_model2 <- lm(Points ~ Attitude + Age + deep, data = variables)
 
 summary(linear_model2)
 
-- There is statistical relationship between points and attitude but not with points and age/deep because of the p-values.
-- This means that the age for example does not affect so much to test points, it is the attitude what matters the most.
+```
 
-## 5. Plots ##
+There is statistical relationship between points and attitude but not with points and age/deep because of the p-values. This means that the age for example does not affect so much to test points, it is the attitude what matters the most.
+
+## 5. Plots
+
+```{r}
 
 plot(linear_model)
 
-plot(linar_model2)
+plot(linear_model2)
 
-- You can see the residuals in the plots 
+```
+
+From the plots you can see the residuals.
 
 
