--- a/index.Rmd
+++ b/index.Rmd
@@ -18,13 +18,24 @@ output:
 ```
   
 ***
+
+***
   
 ```{r child = "chapter2.Rmd"}
 ```
 
 ***
 
-```{r child = "chapter3.Rmd"}
+***
+
+```{r child = "Chapter3.Rmd"}
+```
+
+***
+
+***
+
+```{r child = "Chapter4.Rmd"}
 ```
 
 ***
